--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@
   position: absolute;
   display: none;
   z-index: 8;
+  min-width: 200px;
   transition: left 0.4s cubic-bezier(0.23, 1, 0.32, 1) 0s, top 0.4s cubic-bezier(0.23, 1, 0.32, 1) 0s;
   background-color: rgb(255, 255, 255);
   box-shadow: rgb(174 174 174) 0px 0px 10px;
